# WolframMCP

./: .gitignore  README.md  README_MCP_CLIENT.md  pyproject.toml
scripts/: setup_env.sh  smoke_mcp.py
src/wolfram_mcp/: __init__.py  lsp_client.py  server.py  wolfram.py
tests/: _helpers.py  conftest.py  test_basic.py  test_lsp.py  test_raster.py
tests/fixtures/: example.wl  helper.wl
